--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -307,6 +307,108 @@ section:not(:first-child) {
     padding: 4px 0;
 }
 
+.SezioneDelTitolo .titolo {
+    font-family: "Aku & Kamu";
+    font-size: 64px;
+}
+
+.Biglietti .lstBiglietto {
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.Biglietti .lstBiglietto .biglietto .immagineBiglietto {
+    display: block;
+    width: 206px;
+    height: 406px;
+    margin: 0 auto;
+    margin-bottom: 44px;
+}
+
+.Biglietti .lstBiglietto .biglietto .informazioni p {
+    font-family: "Special Elite";
+    color: var(--black);
+    font-size: 16px;
+    margin-bottom: 12px;
+}
+
+.Biglietti .lstBiglietto .biglietto .azione {
+    background-color: var(--yellow);
+    color: var(--black);
+    font-size: 30px;
+    display: block;
+    margin-top: 43px;
+    padding: 4px 0;
+}
+
+.InformazioniBanner .informazioniBannerContenuto {
+    display: inline-flex;
+    width: 100%;
+    gap: 39px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .immagine .titolo {
+    font-family: "Aku & Kamu";
+    font-size: 48px;
+    color: var(--black);
+}
+
+.InformazioniBanner .informazioniBannerContenuto .immagine img {
+    width: 100%;
+    max-width: 761px;
+    margin-bottom: 28px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .immagine .credito {
+    font-family: "Special Elite";
+    color: var(--black);
+    font-size: 16px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche {
+    padding-top: 105px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche .caratteristica {
+    margin-bottom: 60px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche .caratteristica .caratteristicaTitolo {
+    background-color: var(--black);
+    color: var(--white);
+    width: fit-content;
+    padding: 4px 0;
+    margin-bottom: 30px;
+    font-size: 24px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche .caratteristica .caratteristicaDescrizione,
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche .caratteristica .caratteristicaDescrizione span {
+    font-family: "Special Elite";
+    color: var(--black);
+    font-size: 16px;
+}
+
+.InformazioniBanner .informazioniBannerContenuto .caratteristiche .caratteristica .caratteristicaDescrizione.xl span {
+    font-size: 24px;
+    margin-right: 30px;
+}
+
+.Recensioni .titolo {
+    font-family: "Aku & Kamu";
+    font-size: 64px;
+    color: var(--black);
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.Recensioni .lstRecensioni {
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
 footer {
     padding: 110px 0 37px 0;
     position: relative;
